fixed issues with image greying and menu icon on IE11 ran Validator fixed all warnings

--- a/style.css
+++ b/style.css
@@ -36,10 +36,9 @@
 
 }
 
-.hid-btn p{
+.hid-btn span{
 	position: absolute;
-	writing-mode: vertical-rl;
-	text-orientation: upright;
+	width: 1em;
 	top: 4%;
 	left:30%;
 }
@@ -109,7 +108,6 @@
 	padding-top: 60px;
 	margin-left: 0px;
 	margin-bottom: 10px;
-	/*cursor: default;*/
 }
 
 .pages span{
@@ -126,7 +124,6 @@
 	margin-top: 75px;
 	margin-left: 0;
 	margin-bottom: 10px;
-	/*cursor: default;*/
 	border-top: 3px solid #50b0c9;
 	border-bottom: 3px solid #50b0c9;
 	padding-top: 6px;
@@ -137,7 +134,6 @@
 a{
 	text-decoration: none;
 	color: black;
-	/*cursor: default;*/
 }
 
 li {
@@ -147,7 +143,6 @@ li {
 ul{
 	text-align: center;
 	margin: 50px 0;
-	/*cursor: default;*/
 }
 
 i{
@@ -211,7 +206,6 @@ i{
 	align-items: center;
 	justify-content: space-between;
 	margin-left: -20px;
-	/*cursor: default;*/
 }
 
 .projects img{
@@ -233,7 +227,6 @@ i{
 
 .projects a{
 	text-decoration: none;
-	/*cursor: default;*/
 	flex-basis: 390px;
 	flex-grow: 1;
 	flex-shrink: 1;
@@ -264,7 +257,7 @@ i{
 	content: "";
 	width: 100%;
 	height: 99%;
-	background-color: #00000066;
+	background-color: rgba(0, 0, 0, 0.5);
 	position: absolute;
 	border-radius: 5px;
 }
@@ -294,7 +287,7 @@ i{
 	margin-bottom: 20px;
 }
 
-#contact-info{
+.contact-info{
 	font-family: sans-serif;
 	margin-bottom: 20px;
 	font-size: 20px;
